@@ -4,7 +4,9 @@
 #
 #
 /control/verbose 2
-/run/verbose 2
+###/control/cout/ignoreThreadsExcept 0
+###/run/numberOfThreads 2
+/run/verbose 1
 #
 /testhadr/det/setIsotopeMat Li7 3 7 1.85 g/cm3
 /testhadr/det/setRadius 30 cm
