@@ -85,7 +85,7 @@ PhysicsList::PhysicsList()
   RegisterPhysics(new G4DecayPhysics());
 
   // Radioactive decay
-  ////RegisterPhysics(new G4RadioactiveDecayPhysics());      
+  RegisterPhysics(new G4RadioactiveDecayPhysics());      
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
